--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,15 +27,17 @@
                 <button type="submit" class="btn btn-default">Search</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://github.com/login/oauth/authorize?client_id=8a098cac3934651491fa&redirect_uri=http://localhost:8080/callback&scope=user&state=1">Log in</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Me <span class="caret"></span></a>
+                <li class="dropdown" th:if="${session.user!=null}">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Message</a></li>
                         <li><a href="#">Profiles</a></li>
                         <li><a href="#">exit</a></li>
                     </ul>
                 </li>
+                <li th:if="${session.user==null}"><a href="https://github.com/login/oauth/authorize?client_id=8a098cac3934651491fa&redirect_uri=http://localhost:8080/callback&scope=user&state=1">Log in</a></li>
+
+
             </ul>
         </div>
     </div>
